# AEDDRA

./: .gitignore
3D_Files/: Rpi5-Cam-Case-Bottom.stl
ArduinoIDE/AEDDRA_Rx/: AEDDRA_Rx.ino
ArduinoIDE/AEDDRA_Tx/: AEDDRA_Tx.ino
ArduinoIDE/I2C-Scan/: I2C-Scan.ino
ArduinoIDE/LoRa-Rx/: LoRa-Rx.ino
ROS2_Jazzy/ros2_ws/install/: local_setup.sh  setup.sh
ROS2_Jazzy/ros2_ws/src/arducam_stream/: CMakeLists.txt  package.xml
ROS2_Jazzy/ros2_ws/src/camera_stream/: setup.py
ROS2_Jazzy/ros2_ws/src/imx_stream/: CMakeLists.txt  package.xml
ROS2_Jazzy/ros2_ws/src/imx_stream/src/: camera_publisher.cpp  image_subscriber.cpp  yolo_inference.cpp
ROS2_Jazzy/ros2_ws/src/motor_control/: setup.py
RoboFlow/Land-Mines-or-Hand-Grenade.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  YOLOv8Inference.cpp  best_qnt.onnx  data.yaml  min.ipynb
RoboFlow/Land-Mines-or-Hand-Grenade.v1i.yolov8/test/labels/: 6Bwvc7PiWExsSO7yVZM4nx3rBzzuE0Zww2DtIMUN_jpg.rf.f20b1e35de640339d2f5764d6e786cf7.txt  Foon1dHsyCPjocCn2dXwUd5Pdw7FAu8X2dyiSnwd_jpg.rf.190403e94f78019e8a56fe5707bb3220.txt  IMG_20210814_212620_jpg.rf.449670e417122c754e7754d563c43eb1.txt  M9PraOHd7qXrE3qIUo1nWtAW9V37ogvaSuh7FWEq_jpg.rf.6738159f45547053c996f0761e3ad606.txt  QOEY0AUoR1ksUfcWgJXRSwBMrzTFzbRrYilyoUOD_jpg.rf.ebdb6673373454fa76d3b52d0658e619.txt  Yw0LUGUZMt2XO6UJUmhUO3U35fw6ixNyS2vWSlho_jpg.rf.008b0dab8c4dec2347105ec2120f1de8.txt  abc-001_jpg.rf.0138962485867f741fd06965b85bc309.txt  (+50 more)
RoboFlow/Land-Mines-or-Hand-Grenade.v1i.yolov8/train/: labels.cache
RoboFlow/Land-Mines-or-Hand-Grenade.v1i.yolov8/valid/: labels.cache
STM32CUBEIDE/PwmServo/: .cproject  .mxproject  PwmServo.ioc
STM32CUBEIDE/PwmServo/BSP/: bsp.c  bsp.h  bsp_encoder.c  bsp_motion.c  bsp_motion.h  bsp_motor.c  bsp_motor.h  bsp_pid.c  i2c_slave.c  i2c_slave.h
STM32CUBEIDE/PwmServo/Debug/: PwmServo.elf  PwmServo.list  PwmServo.map  makefile  objects.list  sources.mk
(+600 files in other folders)
